<resources>
    <string name="app_name">Bus Now Admins</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Arabic">Arabic</string>
    <string name="English">English</string>
    <string name="Login">Login</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="AboutText">bus now A forward vision that has been achieved in our application,
       through diligent work and renewed thought to create an application that helps university students and bus companies, until now.
       bus now aims to improve transportation for students in the Gaza Strip by providing a unique and distinguished transportation experience.
 The bus now is characterized by regularity, and all our buses are characterized by cleanliness safety and ease of use, as they are subject to a security monitoring system.</string>

    <string name="password">Password</string>
    <string name="already_have">Already Have An Account?</string>
    <string name="ForgetPassword">Forget Passowrd?</string>
    <string name="membersince">Member since</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="Logout">Logout</string>
    <string name="DarkMode">Dark mode</string>
    <string name="Admins">Admins</string>
    <string name="showall">show all</string>
    <string name="Drivers">Drivers</string>
    <string name="Students">Students</string>
    <string name="AddNewUser">Add new user</string>
    <string name="AddDriver">Add Drivers</string>
    <string name="AddStudents">Add Students</string>
    <string name="Fullname">Full name</string>
    <string name="Phone">Phone</string>
    <string name="Address">Address</string>
    <string name="About">About</string>
    <string name="Language">Language</string>
    <string name="review">Review</string>
    <string name="Share">Share</string>
    <string name="EditEmailAndPassword"><![CDATA[Edit email & password]]></string>
    <string name="RYWant">Do you want to Exit?</string>
    <string name="RYWantLog">Do you want to Logout?</string>
</resources>