<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item android:id="@+id/nav_drawer_darkmode"
            android:title="@string/DarkMode"
            />
        <item android:id="@+id/nav_drawer_language"
            android:title="@string/Language"
            />
    </group>

    <group  >
        <item android:id="@+id/nav_drawer_about"
            android:title="@string/About"
            />
        <item android:id="@+id/nav_drawer_review"
            android:title="@string/review"
            />
        <item android:id="@+id/nav_drawer_share"
            android:title="@string/Share"
            />
        <item android:id="@+id/nav_drawer_logout"
            android:title="@string/Logout"
            />
    </group>
</menu>